--- a/src/main/java/GUI/ui/GUI.form
+++ b/src/main/java/GUI/ui/GUI.form
@@ -19,43 +19,43 @@
         <properties/>
         <border type="none"/>
         <children>
-          <splitpane id="4ae60">
+          <splitpane id="b38ef">
             <constraints>
               <tabbedpane title="Autos"/>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <scrollpane id="9530d">
+              <scrollpane id="2ce19">
+                <constraints>
+                  <splitpane position="right"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="ea47d" class="javax.swing.JTable" binding="tableCars">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+              <grid id="4aa19" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <splitpane position="left"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <grid id="bd54d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                    <margin top="0" left="0" bottom="0" right="0"/>
-                    <constraints/>
-                    <properties/>
-                    <border type="none"/>
-                    <children>
-                      <hspacer id="d87c8">
-                        <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                            <preferred-size width="100" height="-1"/>
-                          </grid>
-                        </constraints>
-                      </hspacer>
-                    </children>
-                  </grid>
+                  <hspacer id="6f199">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="100" height="-1"/>
+                      </grid>
+                    </constraints>
+                  </hspacer>
                 </children>
-              </scrollpane>
-              <component id="f6a4f" class="javax.swing.JTable" binding="tableCars">
-                <constraints>
-                  <splitpane position="right"/>
-                </constraints>
-                <properties/>
-              </component>
+              </grid>
             </children>
           </splitpane>
           <splitpane id="2430f">
