--- a/src/main/java/GUI/ui/GUI.form
+++ b/src/main/java/GUI/ui/GUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="896" height="355"/>
+      <xy x="20" y="20" width="896" height="383"/>
     </constraints>
     <properties>
       <preferredSize width="857" height="491"/>
@@ -39,7 +39,7 @@
                   </component>
                 </children>
               </scrollpane>
-              <grid id="4aa19" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="4aa19" layout-manager="GridLayoutManager" row-count="9" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <splitpane position="left"/>
@@ -47,13 +47,126 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <hspacer id="6f199">
+                  <component id="3c3fe" class="javax.swing.JComboBox" binding="comboBoxTyp">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="100" height="-1"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <model>
+                        <item value="--TYP--"/>
+                        <item value="Combi"/>
+                        <item value="Coupe"/>
+                        <item value="Sportwagen"/>
+                        <item value="Limo"/>
+                        <item value="SUV"/>
+                        <item value="Cabrio"/>
+                      </model>
+                    </properties>
+                  </component>
+                  <component id="c1384" class="javax.swing.JComboBox" binding="comboBoxHerseller">
+                    <constraints>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <model>
+                        <item value="--HERSTELLER--"/>
+                        <item value="BMW"/>
+                        <item value="Mercedes"/>
+                        <item value="VW"/>
+                        <item value="Audi"/>
+                        <item value="Opel"/>
+                        <item value="Nissan"/>
+                        <item value="Porsche"/>
+                        <item value="Lamborghini"/>
+                        <item value="Smart"/>
+                        <item value="Ferrari"/>
+                        <item value="Toyota"/>
+                        <item value="Tesla"/>
+                      </model>
+                    </properties>
+                  </component>
+                  <component id="11afa" class="javax.swing.JTextArea" binding="kommentarTextArea" default-binding="true">
+                    <constraints>
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="50"/>
                       </grid>
                     </constraints>
-                  </hspacer>
+                    <properties>
+                      <text value="--Kommentar--"/>
+                    </properties>
+                  </component>
+                  <component id="13990" class="javax.swing.JSpinner" binding="spinnerMotor">
+                    <constraints>
+                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <component id="f88e4" class="javax.swing.JSpinner" binding="spinnerAusstattung">
+                    <constraints>
+                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                  </component>
+                  <grid id="8f200" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="72121" class="javax.swing.JButton" binding="einfügenButton" default-binding="true">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Einfügen"/>
+                        </properties>
+                      </component>
+                      <component id="4cdc3" class="javax.swing.JButton" binding="aktialisierenButton" default-binding="true">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Aktialisieren"/>
+                        </properties>
+                      </component>
+                      <component id="52308" class="javax.swing.JButton" binding="löschenButton" default-binding="true">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Löschen"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
+                  <vspacer id="80e08">
+                    <constraints>
+                      <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </vspacer>
+                  <vspacer id="17aa3">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </vspacer>
+                  <grid id="fea9b" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="1ece7" class="javax.swing.JSpinner" binding="spinnerJahr">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                      </component>
+                    </children>
+                  </grid>
                 </children>
               </grid>
             </children>
