--- a/src/main/java/de/autohaus/ui/Login.form
+++ b/src/main/java/de/autohaus/ui/Login.form
@@ -98,7 +98,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="16f38" class="javax.swing.JLabel" binding="LIerror">
+          <component id="16f38" class="javax.swing.JLabel" binding="LIError">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
